crates/a2s/tests/snapshots/snapshot_test__0__51_38_89_140_2302_info.snap
---
source: crates/a2s/tests/snapshot_test.rs
expression: info
---
Info {
    protocol: 17,
    name: "ZERO DAYZ SERVERS | Deer Isle 5.9 | No Base Building",
    map: "deerisle",
    folder: "dayz",
    game: "All settings as per the Deer Isle map creator with extra clothi",
    app_id: AppId(
        0,
    ),
    players: 4,
    max_players: 70,
    bots: 0,
    server_type: Dedicated,
    server_os: Windows,
    visibility: false,
    vac: true,
    the_ship: None,
    version: "1.28.161464",
    edf: 177,
    extended_server_info: ExtendedServerInfo {
        port: Some(
            2302,
        ),
        steam_id: Some(
            SteamId(
                90282752895443995,
            ),
        ),
        keywords: Some(
            "battleye,no3rd,external,privHive,shard123ABC,lqs0,etm6.000000,entm4.000000,mod,16:15",
        ),
        game_id: Some(
            GameId(
                221100,
            ),
        ),
    },
    source_tv: None,
}
