crates/a2s/tests/snapshots/snapshot_test__0__51_38_89_140_2302_rules.snap
---
source: crates/a2s/tests/snapshot_test.rs
assertion_line: 47
expression: rules
---
[
    Rule {
        name: "\x01\n",
        value: "\x02\x08\x01\x02\x01\x02\x0c\xd8!!\xed\x042Ї\xc4\x15JD\'s Animated WeaponsЈz\xbe\x04\x83c\xfc\xd8\rAsmondWeapons\xb2\xc0\"t\x04\x1f\xc4\x18\xb1\x0cDayZ Bicycle\x91\xbe\xf7\xee\x04\x8f34\x97\x16SkyZ - Skybox Overhaul\x11J\n\xd9\x04\'0\xf8\xc7\x1cAl",
    },
    Rule {
        name: "\x02\n",
        value: "evaric\'s Clothing Overhaul\xfc\xecIm\x04\x01\x02\x08\'k\x12WindstrideClothing\xdfFP\xba\x04\x9b\x87\xf3\xad\x13Survivor AnimationsP\x13\x8bw\x04;\x8b\x05\xc6\x0fMounts & Sights\xab\xdb\xc0Z\x04.\x98\x15\xd3\x0eZERO Dee",
    },
    Rule {
        name: "\x03\n",
        value: "r Isle\xab\xb5^\xdc\x042C\x82_\x08DeerIsle\xd0\xf1\x19\xb4\x04\x90\'9]\x16Community Online Tools\xc1Ưh\x04\x04\xb0\xef\\\x13Community FrameworkB\x037ka\x14Akol.MountsAndSights\x06Alpace\x03ALV\x06Asmo",
    },
    Rule {
        name: "\x04\n",
        value: "nd\x04AWOL\tAzraelMod\x06B3TR4Y\x0fBeautifulPotato\x04BGOM\x05Buddy\x0cBuilding_Key\x0bcftoolsRoot\x05cynep\x0bCypeRevenge\x0bdaemonforge\tDannyDoom\x04dayz\x0edecea",
    },
    Rule {
        name: "\x05\n",
        value: "sed_steam\ndeerisle59\tdesignful\x11ElderWoodZIkeozzy\x10FlickeringLights\x06FTM228\tGhostWolf\nHAPPYBOMBS\x0bHuffyPublic\x07Hunterz\x0cInclementDab\x19",
    },
    Rule {
        name: "\x06\n",
        value: "Indi_Increased_Lumens_1.5\x06Inedia\x06Inkota\x0eJacob_Mango_V3\x03JAD\x06JayDee\x08M4ketech\x06Makoni\x08Mikey551\x07mikeyxb\tMrZinKNWR\x0cNathSoftware\x0cNotAB",
    },
    Rule {
        name: "\x07\n",
        value: "ananaV3\x05NoWay\x06predek\x06Rajjip\tRedFalcon\x06ruffaz\x05shade\x02SP\x06sumrak\rTheEmperorFox\nTheOutpost\x08THE_WOLF\x06THYER5\x15VoDxRetextures_Vorian\x0cVoD",
    },
    Rule {
        name: "\x08\n",
        value: "x_ACO_Fix\x0bVoDx_Extras\tVoDx_Mags\x03VPP\x08Welliton\x0cWindstrideV2\x02XM\x07Z6Signs\nZenarchist\x15ZERO_huffysar15config\tZERO_VoDx\x9bAll settings as",
    },
    Rule {
        name: "\t\n",
        value: " per the Deer Isle map creator with extra clothing and Quality of Life balances. Join the discussion at https://discord.com/inv",
    },
    Rule {
        name: "\n\n",
        value: "ite/zero-dayz",
    },
    Rule {
        name: "allowedBuild",
        value: "0",
    },
    Rule {
        name: "clientPort",
        value: "0",
    },
    Rule {
        name: "dedicated",
        value: "1",
    },
    Rule {
        name: "island",
        value: "deerisle",
    },
    Rule {
        name: "language",
        value: "65545",
    },
    Rule {
        name: "platform",
        value: "win",
    },
    Rule {
        name: "requiredBuild",
        value: "0",
    },
    Rule {
        name: "requiredVersion",
        value: "128",
    },
    Rule {
        name: "timeLeft",
        value: "15",
    },
]
